Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -38,7 +38,13 @@
 Repository.</p>
 
 <ul>
+<li>  <a href="http://wbond.net/sublime_packages/alignment">Alignment</a>
+</li>
 <li>  <a href="http://net.tutsplus.com/articles/news/introducing-nettuts-fetch/">Nettuts+ Fetch</a>
+</li>
+<li>  <a href="https://sublime.wbond.net/packages/PHP-Twig">PHP-Twig</a>
+</li>
+<li>  <a href="https://sublime.wbond.net/packages/VBScript">VBScript</a>
 </li>
 </ul>
 </li>
@@ -54,8 +60,6 @@ being lost on an update.</p>
 </li>
 <li>  <a href="https://github.com/BoundInCode/AutoFileName">AutoFileName</a>
 </li>
-<li>  <a href="https://github.com/daylerees/colour-schemes">Color Scheme - Daylerees</a>
-</li>
 <li>  <a href="https://github.com/sergeche/emmet-sublime">Emmet</a>
 </li>
 <li>  <a href="https://github.com/kemayo/sublime-text-2-git">Git</a>
@@ -63,8 +67,6 @@ being lost on an update.</p>
 <li>  <a href="https://github.com/jdc0589/JsFormat">JsFormat</a>
 </li>
 <li>  <a href="https://github.com/sirlancelot/LESS-build-sublime">LESS-build</a>
-</li>
-<li>  <a href="https://github.com/dz0ny/LiveReload-sublimetext2">LiveReload</a>
 </li>
 <li>  <a href="https://github.com/SublimeText/Tag">Tag</a>
 </li>
