Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Sublime Text 2 Configuration by sirlancelot</title>
+    <title>Sublime Text Configuration by sirlancelot</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -17,13 +17,13 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Sublime Text 2 Configuration</h1>
+        <h1>Sublime Text Configuration</h1>
         <p>The Obligatory.</p>
-        <p class="view"><a href="https://github.com/sirlancelot/sublimetext-2-config">View the Project on GitHub <small>sirlancelot/sublimetext-2-config</small></a></p>
+        <p class="view"><a href="https://github.com/sirlancelot/sublimetext-config">View the Project on GitHub <small>sirlancelot/sublimetext-config</small></a></p>
         <ul>
-          <li><a href="https://github.com/sirlancelot/sublimetext-2-config/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/sirlancelot/sublimetext-2-config/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/sirlancelot/sublimetext-2-config">View On <strong>GitHub</strong></a></li>
+          <li><a href="https://github.com/sirlancelot/sublimetext-config/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/sirlancelot/sublimetext-config/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/sirlancelot/sublimetext-config">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
@@ -70,7 +70,7 @@ being lost on an update.</p>
 </li>
 <li>  <a href="https://github.com/SublimeText/Tag">Tag</a>
 </li>
-<li>  <a href="https://github.com/allanhortle/Centurion">Theme - Centurion</a>
+<li>  <a href="https://github.com/kkga/spacegray">Theme - Spacegray</a>
 </li>
 </ul>
 </li>
